# PkgTest

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
conf/: blacklist.json  metadata.py  settings.json
docs/src/: index.html
docs/src/pkgtest/: index.html  mod_name_1.html  mod_name_2.html
misc/: tree.txt
src/pkgtest/: __init__.py  mod_name_1.py  mod_name_2.py
